@@ -1,3 +1,12 @@
+2012-12-17  Kenneth Rohde Christiansen  <kenneth@webkit.org>
+
+        Add manual test to verify that geometry methods (moveTo, etc) work
+        https://bugs.webkit.org/show_bug.cgi?id=105160
+
+        Reviewed by Alexis Menard.
+
+        * ManualTests/window-geometry.html: Added.
+
 2012-12-16  ChangSeok Oh  <shivamidow@gmail.com>
 
         [GTK][AC] Build failure with an option --with-acceleration-backend=clutter
